# key-value-store-rust

./: .gitignore  Cargo.toml  README.md
benches/: benchmark_engine.rs
sled_db/: db
src/: client.rs  error.rs  lib.rs  server.rs  thread_pool.rs  utils.rs
src/engines/: kvs.rs  mod.rs  sled.rs
tests/: cli.rs  kv_store.rs  tests.rs  thread_pool.rs
