[package]
name = "kvs"
version = "0.0.3"
author = ["James Li <yli17@alumni.nd.edu>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
sled = "0.34.7"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.3"
rand = "0.8.5"

[[bench]]
name = "benchmark_engine"
harness = false
